<resources>
    <string name="app_name">Chromatics</string>

    <string name="action_settings">Settings</string>
    <string name="test_btn_text">test button</string>
    <string name="enabled_text_hint">enabled color</string>
    <string name="pressed_text_hint">pressed color</string>
    <string name="disabled_text_hint">disabled color</string>
    <string name="save_btn_text">save</string>
    <string name="blank_input_message">can\'t save blank colors</string>
    <string name="checkbox_label_text">test button enabled?</string>
    <string name="screen_density">screen density</string>
    <string name="screen_width">screen width</string>
    <string name="screen_height">screen height</string>
</resources>
