<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_btn_text"/>

    <EditText
            android:id="@+id/btn_1_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enabled_text_hint"/>

    <EditText
            android:id="@+id/btn_1_pressed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pressed_text_hint"/>

    <EditText
            android:id="@+id/btn_1_disabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/disabled_text_hint"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/checkbox_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_label_text"
                android:labelFor="@+id/btn_1_state"/>
        <CheckBox
                android:id="@id/btn_1_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
    <Button
            android:layout_alignParentBottom="true"
            android:text="@string/save_btn_text"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveColors"/>

</RelativeLayout>
